[package]
name = "antwort"
version = "0.1.0"
edition = "2021"

[dependencies]
antwort_core = { path = "../antwort_core" }
antwort_solver = { path = "../antwort_solver" }
antwort_rules = { path = "../antwort_rules" }
serde_json = "1.0.109"

[build-dependencies]
convert_case = "0.6.0"
walkdir = "2.4.0"
